<resources>
    <string-array name="account_exclusions_handset">
        <item>@string/handset_account_exclusion_from_transaction_lists</item>
        <item>@string/handset_account_exclusion_from_reports_charts</item>
        <item>@string/handset_account_exclusion_from_account_listings</item>
        <item>@string/handset_account_exclusion_from_budgets</item>
        <item>@string/handset_account_exclusion_from_transfers_in</item>
        <item>@string/handset_account_exclusion_from_transfers_out</item>
    </string-array>
    <string-array name="account_selection_popup">
        <item>VIEW ALL TXNS</item>
        <item>VIEW UNCLEARED TXNS</item>
        <item>EDIT SETTINGS</item>
        <item>SHOW/HIDE DATA</item>
        <item>DELETE THIS ACCOUNT</item>
    </string-array>
    <string-array name="bank_selection_popup">
        <item>REFRESH DATA</item>
        <item>REMOVE</item>
        <item>UPDATE USERNAME AND PASSWORD</item>
    </string-array>
    <string-array name="fix_bank_selection_popup">
        <item>FIX BANK</item>
        <item>REFRESH DATA</item>
        <item>REMOVE</item>
        <item>UPDATE USERNAME AND PASSWORD</item>
    </string-array>
       <string-array name="fix_bank_options">
        <item>@string/fix_bank_more_info_needed</item>
        <item>@string/credentials</item>
        <item>@string/delete_institution</item>
    </string-array>
      <string-array name="fix_bank_exception_options">
        <item>@string/fix_bank_somethings_wrong</item>
        <item>@string/credentials</item>
        <item>@string/delete_institution</item>
    </string-array>
    <string-array name="account_types_bank_options">
        <item>@string/icon_lock</item>
        <item>@string/icon_trash</item>
    </string-array>
    <string-array name="account_types_title_bar_icons">
        <item>@string/icon_add</item>
        <item>@string/icon_refresh</item>
        <item>@string/icon_help</item>
    </string-array>
    <string-array name="dashboard_title_bar_icons">
        <item>@string/icon_email</item>
        <item>@string/icon_help</item>
        <item>@string/icon_refresh</item>
    </string-array>
    <string-array name="bank_options">
        <item>@string/credentials</item>
        <item>@string/delete_institution</item>
    </string-array>
    <string-array name="transactions_title_bar_icons">
        <item>@string/icon_help</item>
    </string-array>
    <string name="accounts">accounts</string>
    <string name="account">Account</string>
    <string name="account_types_indicator_hide">HIDE</string>
    <string name="account_types_indicator_show">SHOW</string>
    <string name="account_types_title">Accounts</string>
    <string name="action_menu">ACTION MENU</string>
    <string name="add_account_automatically_title">AUTOMATICALLY DOWNLOAD TRANSACTIONS</string>
    <string name="add_account_automatically_desc">Connect to your account online and let us automatically download your transactions. No data entry needed.</string>
    <string name="add_account_institution"> INSTITUTION</string>
    <string name="add_account_institution_connect">CONNECT TO %1$s</string>
    <string name="add_account_label">ADDING A NEW ACCOUNT</string>
    <string name="add_account_label_handset">NEW ACCOUNT</string>
    <string name="add_account_manually_title">MANUALLY MANAGE TRANSACTIONS</string>
    <string name="add_account_manually_cannot_save">Cannot Save</string>
    <string name="add_account_manually_cannot_save_message">Account Name field is required</string>
    <string name="add_account_manually_desc">Manage your transactions independent of your bank and reconcile between the two automatically, or not.</string>
    <string name="add_account_search_box">ENTER YOUR INSTITUTION\'S NAME HERE</string>
    <string name="add_account_enter_credentials">Please enter your online credentials</string>
    <string name="add_account_new_account">NEW %1$s ACCOUNT</string>
    <string name="add_account_type_to_add">ACCOUNT TYPE TO ADD?</string>
    <string name="add_account_type_of_property">TYPE OF PROPERTY</string>
    <string name="add_account_type_search_for_institution">Search for an institution</string>
    <string name="account_transaction_type">these transactions are primarily:</string>
    <string name="all_accounts">All Accounts</string>
    <string name="app_name">MoneyMobile</string>
    <string name="assets">Assets:</string>
    <string name="at_app">Appliances</string>
    <string name="at_art">Art</string>
    <string name="at_cash">Cash</string>
    <string name="at_cc">Credit Card</string>
    <string name="at_checking">Checking</string>
    <string name="at_comp">Computer</string>
    <string name="at_elec">Electronics</string>
    <string name="at_fur">Furniture</string>
    <string name="at_inv">Investments</string>
    <string name="at_jew">Jewelry</string>
    <string name="at_loans">Loans</string>
    <string name="at_loc">Line of Credit</string>
    <string name="at_misc">Miscellaneous</string>
    <string name="at_mort">Mortgage</string>
    <string name="at_prop">Property</string>
    <string name="at_re">Real Estate</string>
    <string name="at_saving">Savings</string>
    <string name="at_se">Sports Equipment</string>
    <string name="at_unknown">Unknown</string>
    <string name="at_veh">Vehicle</string>
    <string name="atg_cash">Cash</string>
    <string name="atg_ccd">Credit Card Debt</string>
    <string name="atg_inv">Investments</string>
    <string name="atg_od">Other Debt</string>
    <string name="atg_prop">Property</string>
    <string name="business">Business</string>
    <string name="button_cancel">CANCEL</string>
    <string name="button_daily">BY DAY</string>
    <string name="button_demo">DEMO MODE</string>
    <string name="button_login">LOGIN</string>
    <string name="button_monthly">BY MONTH</string>
    <string name="button_ok">OK</string>
    <string name="button_quarterly">BY QUARTER</string>
    <string name="button_return_home">RETURN TO HOME</string>
    <string name="button_return_login">RETURN TO LOGIN</string>
    <string name="button_setup">I NEED TO SET UP MY MOBILE ACCOUNT</string>
    <string name="button_submit">SUBMIT</string>
    <string name="button_transactions">Tap to View Transactions</string>
    <string name="button_yearly">BY YEAR</string>
    <string name="category_search">Start typing to search for a category</string>
    <string name="credentials">Credentials</string>
    <string name="connect">Connect</string>
    <string name="connecting">Connecting to bank</string>
    <string name="crash_title">Crash Detected</string>
    <string name="crash_message">Something seems to have gone wrong! To improve our app and better server you would
        you mind providing a brief description of what happened when the app crashed?</string>
    <string name="crash_yes">Report</string>
    <string name="crash_no">Ignore</string>
    <string name="crash_email_subject">MoneyMobile Android Crash Report - </string>
    <string name="crash_email_text">When the app crashed I was:\n\n</string>
    <string name="crash_email_address">android@moneydesktop.com</string>
    <string name="ct_asst">Asset</string>
    <string name="ct_bal">Balance</string>
    <string name="ct_equity">Equity</string>
    <string name="ct_exp">Expense</string>
    <string name="ct_flow">Flow</string>
    <string name="ct_inc">Income</string>
    <string name="ct_liab">Liability</string>
    <string name="ct_stat">Statistic</string>
    <string name="dashboard_title">Financial Dashboard:</string>
    <string name="default_account">MONEY MARKET</string>
    <string name="default_bank">ABC BANK</string>
    <string name="default_category">Category</string>
    <string name="default_header">Header</string>
    <string name="default_price">5.99</string>
    <string name="default_title">Title</string>
    <string name="delete_account_message">This will delete all data associated with this account. Are you sure?</string>
    <string name="delete_bank_with_no_accounts_message">All accounts for this institution have been removed. Continue to remove the institution?</string>
    <string name="delete_bank_message">All associated accounts will also be removed</string>
    <string name="delete_bank_title">Remove %1$s?</string>
    <string name="delete_institution">Delete this Institution</string>
    <string name="demo_message">Creating Demo Data&#8230;</string>
    <string name="description">description</string>
    <string name="dollar_sign">$</string>
    <string name="email_title">Send Email</string>
    <string name="email_dashboard_subject">My Finance Dashboard</string>
    <string name="email_transaction_subject">Check Out This Transaction</string>
    <string name="email_transactions_subject">Check Out These Transactions</string>
    <string name="empty_transactions">No Transactions</string>
    <string name="error_email_invalid">Please ensure your email address is valid.</string>
    <string name="error_login_failed">YOUR LOGIN\nWAS UNSUCCESSFUL.</string>
    <string name="error_login_incomplete">Please complete the login fields</string>
    <string name="error_login_invalid">Did you know you need to setup\nyour mobile account before you\ncan use this app?</string>
    <string name="error_title">Error</string>
    <string name="fix_bank_connect_instruction">Please answer the following:</string>
    <string name="fix_bank_notification_label">Bank Connection Broken</string>
    <string name="fix_bank_notification_title">Broken Bank</string>
    <string name="fix_bank_notification_mfa_message">Multifactor Authentication Required. Click on the button below to give us these additional pieces of information.</string>
    <string name="feature_not_available">Feature Not Available</string>
    <string name="feature_not_available_message">This feature is not available in demo mode</string>
    <string name="feature_not_available_delete_title">Primary Institution: %1$s</string>
    <string name="icon_cash">C</string>
    <string name="icon_cc">F</string>
    <string name="icon_checking">D</string>
    <string name="icon_feedback">6</string>
    <string name="icon_inv">I</string>
    <string name="icon_loans">H</string>
    <string name="icon_loc">J</string>
    <string name="icon_lock">E</string>
    <string name="icon_logout">7</string>
    <string name="icon_mort">L</string>
    <string name="icon_prop">M</string>
    <string name="icon_saving">O</string>
    <string name="label_add_linked_account">Add a Linked Account</string>
    <string name="label_add_linked_account_description">With a linked account, your account data (including transactions) are automatically downloaded straight to your phone. Manual data entry is so last year.</string>
    <string name="label_add_manual_account">Add a Manual Account</string>
    <string name="label_add_manual_account_description">If you hate clouds (or just love typing) then you can add a manual account. These accounts aren\'t linked to any data feeds, so you have to enter every balance and transaction by hand.</string>
    <string name="label_app_lock">APP LOCK</string>
    <string name="label_balances">Account Balances as of Today</string>
    <string name="label_feedback">FEEDBACK</string>
    <string name="label_unlink">UNLINK</string>
    <string name="setting_feedback_text">Tell us what we\'re doing wrong, or right. Don\'t hold back we can take it.</string>
    <string name="setting_feedback_title">Feedback</string>
    <string name="setting_lock_text">Enter a four-digit code to password protect your data.</string>
    <string name="setting_lock_title">Lock Device</string>
    <string name="setting_unlink_text">Unlink this device from your account and delete all the data from this device. (Your data is still stored on our servers.)</string>
    <string name="setting_unlink_title">Unlink</string>
    <string name="title_activity_settings">Settings</string>
</resources>