<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="    http://schemas.android.com/apk/res/main.java.com.moneydesktop.finance"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center" >

    <RelativeLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/account_summary_fragment_handset_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:weightSum="100"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/label_balance_view"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="6"
                android:paddingLeft="10dp"
                android:paddingBottom="2dp"
                android:gravity="left|bottom"
                android:src="@string/label_balances"
                android:textColor="@color/gray4" />

            <com.moneydesktop.finance.views.LineView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:isVertical="false"
                app:lineColor="@color/gray1"
                app:lineStrokeWidth="2dp" />

            <com.moneydesktop.finance.views.AccountBalanceItemView
                android:id="@+id/account_balance_cash"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10.4"
                app:accountType="@string/at_cash"
                app:isDebt="false"
                app:textIcon="@string/icon_cash" />

            <com.moneydesktop.finance.views.LineView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:isVertical="false"
                app:lineColor="@color/gray1"
                app:lineStrokeWidth="2dp" />

            <com.moneydesktop.finance.views.AccountBalanceItemView
                android:id="@+id/account_balance_checking"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10.4"
                app:accountType="@string/at_checking"
                app:isDebt="false"
                app:textIcon="@string/icon_checking" />

            <com.moneydesktop.finance.views.LineView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:isVertical="false"
                app:lineColor="@color/gray1"
                app:lineStrokeWidth="2dp" />

            <com.moneydesktop.finance.views.AccountBalanceItemView
                android:id="@+id/account_balance_inv"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10.4"
                app:accountType="@string/at_inv"
                app:isDebt="false"
                app:textIcon="@string/icon_inv" />

            <com.moneydesktop.finance.views.LineView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:isVertical="false"
                app:lineColor="@color/gray1"
                app:lineStrokeWidth="2dp" />

            <com.moneydesktop.finance.views.AccountBalanceItemView
                android:id="@+id/account_balance_prop"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10.4"
                app:accountType="@string/at_prop"
                app:isDebt="false"
                app:textIcon="@string/icon_prop" />

            <com.moneydesktop.finance.views.LineView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:isVertical="false"
                app:lineColor="@color/gray1"
                app:lineStrokeWidth="2dp" />

            <com.moneydesktop.finance.views.AccountBalanceItemView
                android:id="@+id/account_balance_saving"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10.4"
                app:accountType="@string/at_saving"
                app:isDebt="false"
                app:textIcon="@string/icon_saving" />

            <com.moneydesktop.finance.views.LineView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:isVertical="false"
                app:lineColor="@color/gray1"
                app:lineStrokeWidth="2dp" />

            <com.moneydesktop.finance.views.AccountBalanceItemView
                android:id="@+id/account_balance_cc"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10.4"
                app:accountType="@string/at_cc"
                app:isDebt="true"
                app:textIcon="@string/icon_cc" />

            <com.moneydesktop.finance.views.LineView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:isVertical="false"
                app:lineColor="@color/gray1"
                app:lineStrokeWidth="2dp" />

            <com.moneydesktop.finance.views.AccountBalanceItemView
                android:id="@+id/account_balance_loc"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10.4"
                app:accountType="@string/at_loc"
                app:isDebt="true"
                app:textIcon="@string/icon_loc" />

            <com.moneydesktop.finance.views.LineView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:isVertical="false"
                app:lineColor="@color/gray1"
                app:lineStrokeWidth="2dp" />

            <com.moneydesktop.finance.views.AccountBalanceItemView
                android:id="@+id/account_balance_loans"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10.4"
                app:accountType="@string/at_loans"
                app:isDebt="true"
                app:textIcon="@string/icon_loans" />

            <com.moneydesktop.finance.views.LineView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:isVertical="false"
                app:lineColor="@color/gray1"
                app:lineStrokeWidth="2dp" />

            <com.moneydesktop.finance.views.AccountBalanceItemView
                android:id="@+id/account_balance_mort"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10.8"
                app:accountType="@string/at_mort"
                app:isDebt="true"
                app:textIcon="@string/icon_mort" />

            <com.moneydesktop.finance.views.LineView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:isVertical="false"
                app:lineColor="@color/gray1"
                app:lineStrokeWidth="2dp" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>